# AeroDataBox

./: .gitignore  Cargo.toml  readme.md
src/: airport.rs  bin.rs  flight.rs  lib.rs  main.rs
src/airport/: airport_by_code.rs  distance_time_by_airport.rs
src/flight/: departures.rs  mod.rs  status.rs
