[package]
name = "AeroDataBox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async={version = "0.0.2"}
serde={version = "1.0.145", features = ["json"]}
tokio={version = "1.21.2", features = ["full"]}
futures={version = "*"}