[package]
name = "AeroDataBox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde={version = "1.0.145", features = ["derive"]}
serde_json = "1.0.64"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.21.2", features = ["full"] }
chrono = {version="0.4.19", features=["serde"]}
futures = "0.3" #for async and await blocks